--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "firebase": "^11.3.1",
     "firebase-admin": "^13.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "nodemailer": "^6.10.0"
   }
 }
