implemented team formation logic

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.536.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fox-toast": "^1.10.20",
     "react-router-dom": "^6.29.0",
     "xlsx": "^0.18.5"
   },
