--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,1 +1,6 @@
-﻿{ "compilerOptions": { "baseUrl": ".", "paths": { "@/*": ["./src/*"] } } }
+﻿{
+  "compilerOptions": { "baseUrl": ".", "paths": { "@/*": ["./src/*"] } },
+  "checkJs": true,
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
+}
