--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "firebase": "^11.3.1",
+    "goober": "^2.1.18",
     "lucide-react": "^0.536.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
